#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2014-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999903 released.

        * Added CPAN::Shell->bye to Makefile.PL.


2014-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999902 released.

        * Added debugging for Ubuntu install.


2014-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9999999901 released.

        * Added sudo to make and Build commands for Ubuntu.


2014-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999999 released.

        * Added print to debug tar in Makefile.PL for Ubuntu.


2014-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999998 released.

        * Added sudo to tar in Makefile.PL for Ubuntu.


2014-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999997 released.

        * Update Makefile.PL to use Makefile.PL rather than 
          Build.PL for IO::CaptureOutput.


2014-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999996 released.

        * More work on New User Experience.

        * Updated Makefile.PL for AWS Ubuntu installations.

        * New version of Term::Menus paired with this release.


2014-06-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999995 released.

        * More work on New User Experience.

        * New version of Term::Menus paired with this release.


2014-06-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999994 released.

        * More work on New User Experience.
