@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 cb18eb9b8fcde73212aad9dd7e454a2521e30451 ChangeLog
+SHA1 04c5b78f295019aa786aee2530e089bdc94809e8 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 f8b749e0212189438c4cd11d26833ca0dd144493 META.yml
-SHA1 1d031a07bfb2882c871ed1eb9deedbf70fcd0baa Makefile.PL
+SHA1 82e4697c84a0f78106a438580c5600b012d95090 META.yml
+SHA1 b3b80700fd167754359905457d87f9966c9803d7 Makefile.PL
 SHA1 7250b2f536fe8a96fb25fc7435146bc006aaefe1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 b49ee0f29a9e578dfc05ac8a69ceee952810622d bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 fb2c2f6e2ade19cd024dad15dd25bebf85023a4b install_mozrepl_plugin.ahk
-SHA1 b7510a9bd017b5a4d9577d097c42d223618f6667 lib/Net/FullAuto.pm
+SHA1 964e1512cff91e9f2459702f3191d61487881c9c lib/Net/FullAuto.pm
 SHA1 dabbf5e523732ed0d3084fb91dcccb4f1c330ceb lib/Net/FullAuto/Custom/BackUp/README
 SHA1 c2219c6cd1af2a775ebd3b90e0d4731ef0aededc lib/Net/FullAuto/Custom/README
 SHA1 32064cac342c1fab8377c4b9fe5c41be23a92e78 lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTpcyNAAoJEBa/9Pad787E3rgH/RcGic02CvH1B/CZzdAQUr52
-yNxZ/Tjhcl1vntJtE37SCXfFD5z6mjcr63hC+feHfvPCkQyGzDM6ZGTadbeSV8IX
-h//765p/Q7HbNss4DsPeLhxQSNQAd6VZ1mNRmt9gJUuk0Qq1od16KF5l5+hjpx+w
-ivkuOffOLL0YUbI298ptVpf2+xzjwvgxqVtQ7qLP0K/ZqAvhysanLJB9QXjiE89e
-bd8Mubbm4HhSrdW4+UJiPN+rjEfuSkqJq/3yIQlh0oknv7atfTDGend/NUz99qy2
-1bayK94mmToGhPmZjXsSUaipyb6BwZRbu0zoUIAhy7FNj/97H1P0kT8yAgzvDVk=
-=MPwU
+iQEcBAEBAgAGBQJTpd9SAAoJEBa/9Pad787EapwIAMB4IVtTQGn6Qaak2xc485VZ
+SmgGcthyb3jF0w8sSnXuHIPHL3skVrKOh817gPKNJ3vQMPTnOWN4oMUpjOWqiL6G
+3dtVAIE4JmHMk3c5ODgBFKuLNBVDEl+RJiSpKfogr/6DrbGpITLRoJMEOUPssM58
+j8Iyh5AGKkdtnSXh4YV7hj3RXbJ/6vLpOToDC9BtgkwL11EiSs69UbZnFJ4wjbhR
+PcUNlay9GlcBEZXz7HN5SNEwh8NOOVDH8+Sg0UoHkvMpqxeq2b2T/ZsabayrN56/
+2UN2YCj+iQYoBbar/FnJPIeTb5UE58anJpxOyzBnFUaVxI0nFxC3HY503wgjVnE=
+=WiCk
 -----END PGP SIGNATURE-----
