@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9999999903';
+our $VERSION='0.9999999904';
 
 
 use 5.005;
